# lucien

./: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  lucien.example.yaml  pyproject.toml
lucien/: __init__.py  cli.py  config.py  db.py  extract_worker.py  materialize.py  pipeline.py  planner.py  scanner.py  tags_macos.py
lucien/extractors/: __init__.py  docling.py  pypdf.py  text.py  vision_ocr.py
lucien/llm/: __init__.py  client.py  models.py  pipeline.py  prompts.py
openspec/: project.md
openspec/changes/add-text-extraction/: design.md  proposal.md  tasks.md
openspec/changes/add-text-extraction/specs/text-extraction/: spec.md
openspec/changes/archive/2026-01-16-add-text-extraction/: tasks.md
openspec/changes/archive/2026-01-17-add-ai-labeling/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-17-add-ai-labeling/specs/ai-labeling/: spec.md
openspec/changes/archive/2026-01-17-consolidate-storage-to-home-dir/: proposal.md  tasks.md
openspec/changes/consolidate-storage-to-home-dir/specs/configuration/: spec.md
openspec/changes/fix-duplicate-extractions/: proposal.md  tasks.md
openspec/specs/ai-labeling/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/text-extraction/: spec.md
tests/: __init__.py  test_config.py  test_llm.py  test_pipeline.py
